syntax = "proto3";

option go_package = ".;common";

message UserRq {
    int32 id = 1;
}

message UserRp {
    string name = 1;
}

service Data {
    rpc GetUser(UserRq) returns (UserRp);
}
